statements and state done